# Usso-SSO

./: .dockerignore  .gitignore  Dockerfile  LICENSE  README.md  docker-compose.yml  liara.json  main.py  requirements.txt  sample.env
app/: .dockerignore  DESCRIPTION.md  Dockerfile  Dockerfile.uv  app.py  config.json  exceptions.py  jwt.py  liara.json  main.py  pyproject.toml  pytest.ini  requirements.txt
app/apps/api_key/: routes.py  schemas.py  services.py
app/apps/middlewares/: auth.py  cors.py  jwt_auth.py
app/apps/models/: auth.py  base.py  user.py  website.py
app/apps/routes/: app_auth.py  auth.py  mail.py  user.py  website.py
app/apps/schemas/: config.py  website.py
app/apps/serializers/: auth.py  jwt_auth.py  user.py  website.py  website_user.py
app/apps/util/: sms.py  str_tools.py  utility.py
app/core/: exceptions.py
app/middlewares/: auth.py  cors.py  jwt_auth.py
app/models/: auth.py  base.py  user.py  website.py
app/routes/: auth.py  mail.py  register.py  user.py  website.py
app/serializers/: __init__.py  auth.py  jwt_auth.py  user.py  website.py  website_user.py
app/server/: config.py  db.py  server.py
app/tests/: conftest.py  constants.py  test_app_auth.py  test_health.py
app/util/: current_user.py  mail.py  num_tools.py  password.py  singleton.py  sms.py  utility.py  weak_passwords.txt
app/utils/: aionetwork.py  texttools.py
app/web/: 404.html  index.html  index.txt
app/web/_next/static/chunks/: 209-80e803259b3efe18.js  336-248c27c6b78a2fb0.js  352-23790287fbff63f0.js  487-0278c03b03f36a66.js  886-3dd5479b6881046e.js  (+3 more)
(+16 files in other folders)
